Deprecated Structure/Server/K8S/postgres-main-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-main-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-main
  template:
    metadata:
      labels: 
        app: postgres-main
    spec:
      containers:
        - name: postgres-main
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresqlmain/data
            name: postgredb
      volumes: 
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-main-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-main-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-main
  ports:
  - name: postgres-main
    protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-main-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: postgres-main
  ports: 
  - protocol: TCP
    port: 5432
    targetPort: 5432
